# ddmlib-install-package-repro

./: .bazelrc  MODULE.bazel  README.md
src/android/app/: AndroidManifest.xml  BUILD.bazel
src/android/app/java/com/example/androidapp/: MainActivity.java
src/main/org/example/: BUILD.bazel  Main.java
