load("@rules_java//java:defs.bzl", "java_binary")

package(default_visibility = ["//visibility:public"])

java_binary(
    name = "Main",
    srcs = ["Main.java"],
    args = [
        "$(location //src/android/app:app.apk)",
        "$(location @@rules_android++android_sdk_repository_extension+androidsdk//:platform-tools/adb)",
    ],
    data = [
        "//src/android/app:app.apk",
        "@@rules_android++android_sdk_repository_extension+androidsdk//:platform-tools/adb",
    ],
    main_class = "org.example.Main",
    deps = [
        "@maven//:com_android_tools_ddms_ddmlib",
    ],
)
